--- a/BE/settings.json
+++ b/BE/settings.json
@@ -4300,14 +4300,14 @@
         },
         "0ceb5d7f-00bb-48b5-95ba-0b204d99da44": {
             "order": 39,
-            "name": "테스트",
+            "name": "월드 재입장",
             "created_at": "2024-12-11T21:30:39.063045",
-            "updated_at": "2024-12-12T07:49:00.069627",
+            "updated_at": "2024-12-12T08:29:51.485172",
             "trigger_key": {
-                "key_code": "1",
+                "key_code": "F2",
                 "modifiers": 0,
-                "scan_code": 2,
-                "virtual_key": 49
+                "scan_code": 60,
+                "virtual_key": 113
             },
             "repeat_count": 1,
             "is_nested": false,
@@ -4315,14 +4315,114 @@
                 {
                     "order": 1,
                     "type": "mouse_input",
-                    "display_text": "마우스 입력: 메뉴 (3180, 117)",
-                    "name": "메뉴",
+                    "display_text": "마우스 입력: 메뉴 버튼 클릭 (2009, 73)",
+                    "name": "메뉴 버튼 클릭",
                     "action": "클릭",
                     "button": "왼쪽 버튼",
-                    "coordinates_x": 3180,
-                    "coordinates_y": 117,
-                    "ratios_x": 0.9665653495440729,
-                    "ratios_y": 0.0642504118616145
+                    "coordinates_x": 2009,
+                    "coordinates_y": 73,
+                    "ratios_x": 0.9677263969171483,
+                    "ratios_y": 0.0641476274165202
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.5초",
+                    "duration": 0.5,
+                    "order": 2
+                },
+                {
+                    "order": 3,
+                    "type": "mouse_input",
+                    "display_text": "마우스 입력: 월드 재입장 버튼 클릭 (616, 860)",
+                    "name": "월드 재입장 버튼 클릭",
+                    "action": "클릭",
+                    "button": "왼쪽 버튼",
+                    "coordinates_x": 616,
+                    "coordinates_y": 860,
+                    "ratios_x": 0.29672447013487474,
+                    "ratios_y": 0.7557117750439367
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.5초",
+                    "duration": 0.5,
+                    "order": 4
+                },
+                {
+                    "order": 5,
+                    "type": "mouse_input",
+                    "display_text": "마우스 입력: 월드 재입장 확인창 클릭 (915, 669)",
+                    "name": "월드 재입장 확인창 클릭",
+                    "action": "클릭",
+                    "button": "왼쪽 버튼",
+                    "coordinates_x": 915,
+                    "coordinates_y": 669,
+                    "ratios_x": 0.4407514450867052,
+                    "ratios_y": 0.5878734622144113
+                }
+            ]
+        },
+        "0b82b6a5-4c4a-497b-8f19-842e24d4e24e": {
+            "order": 40,
+            "name": "캐릭터 선택",
+            "created_at": "2024-12-12T08:29:17.016286",
+            "updated_at": "2024-12-12T08:29:42.638594",
+            "trigger_key": {
+                "key_code": "F3",
+                "modifiers": 0,
+                "scan_code": 61,
+                "virtual_key": 114
+            },
+            "repeat_count": 1,
+            "is_nested": false,
+            "items": [
+                {
+                    "order": 1,
+                    "type": "mouse_input",
+                    "display_text": "마우스 입력: 이어하기 버튼 클릭 (1566, 837)",
+                    "name": "이어하기 버튼 클릭",
+                    "action": "클릭",
+                    "button": "왼쪽 버튼",
+                    "coordinates_x": 1566,
+                    "coordinates_y": 837,
+                    "ratios_x": 0.7543352601156069,
+                    "ratios_y": 0.7355008787346221
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.5초",
+                    "duration": 0.5,
+                    "order": 2
+                },
+                {
+                    "order": 3,
+                    "type": "mouse_input",
+                    "display_text": "마우스 입력: 첫번째 캐릭터 클릭 (926, 342)",
+                    "name": "첫번째 캐릭터 클릭",
+                    "action": "클릭",
+                    "button": "왼쪽 버튼",
+                    "coordinates_x": 926,
+                    "coordinates_y": 342,
+                    "ratios_x": 0.4460500963391137,
+                    "ratios_y": 0.30052724077328646
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.5초",
+                    "duration": 0.5,
+                    "order": 4
+                },
+                {
+                    "order": 5,
+                    "type": "mouse_input",
+                    "display_text": "마우스 입력: OK버튼 클릭 (1032, 930)",
+                    "name": "OK버튼 클릭",
+                    "action": "클릭",
+                    "button": "왼쪽 버튼",
+                    "coordinates_x": 1032,
+                    "coordinates_y": 930,
+                    "ratios_x": 0.49710982658959535,
+                    "ratios_y": 0.8172231985940246
                 }
             ]
         }
