--- a/BE/settings.json
+++ b/BE/settings.json
@@ -61,13 +61,12 @@
             "order": 1,
             "name": "체력 회복 - 8회",
             "created_at": "2024-11-26T06:51:44.957381",
-            "updated_at": "2024-12-11T20:34:36.127711",
+            "updated_at": "2024-12-12T08:35:31.269863",
             "trigger_key": {
-                "display_text": "",
-                "key_code": "숫자패드 /",
+                "key_code": "1",
                 "modifiers": 0,
-                "scan_code": 53,
-                "virtual_key": 111
+                "scan_code": 2,
+                "virtual_key": 49
             },
             "repeat_count": 8,
             "is_nested": false,
@@ -393,13 +392,12 @@
             "order": 5,
             "name": "보호 무장 힘",
             "created_at": "2024-11-26T10:58:29.227835",
-            "updated_at": "2024-12-11T23:49:41.280190",
+            "updated_at": "2024-12-12T08:35:26.538192",
             "trigger_key": {
-                "display_text": "",
-                "key_code": "숫자패드 .",
+                "key_code": "숫자패드 +",
                 "modifiers": 0,
-                "scan_code": 83,
-                "virtual_key": 110
+                "scan_code": 78,
+                "virtual_key": 107
             },
             "repeat_count": 1,
             "is_nested": false,
@@ -4423,6 +4421,73 @@
                     "coordinates_y": 930,
                     "ratios_x": 0.49710982658959535,
                     "ratios_y": 0.8172231985940246
+                }
+            ]
+        },
+        "22b1ce84-7d6a-4d56-ba3e-f73eb12051bf": {
+            "order": 41,
+            "name": "중독, 마비 첨 사냥 - 무한반복 - 복제",
+            "created_at": "2024-12-12T08:34:33.775036",
+            "updated_at": "2024-12-12T08:34:43.310045",
+            "trigger_key": null,
+            "repeat_count": 1,
+            "is_nested": true,
+            "items": [
+                {
+                    "order": 1,
+                    "type": "logic",
+                    "display_text": "첨 중독, 저주, 마비 - 1회",
+                    "logic_id": "970a1723-88f9-4a50-8bb4-4f8c8f8199fe",
+                    "logic_name": "첨 중독, 저주, 마비 - 1회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 2,
+                    "type": "logic",
+                    "display_text": "공력증강 - 연속1회 - 사냥용",
+                    "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
+                    "logic_name": "공력증강 - 연속1회 - 사냥용",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 3,
+                    "type": "logic",
+                    "display_text": "공력증강 - 연속1회 - 사냥용",
+                    "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
+                    "logic_name": "공력증강 - 연속1회 - 사냥용",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 4,
+                    "type": "logic",
+                    "display_text": "공력증강 - 연속1회 - 사냥용",
+                    "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
+                    "logic_name": "공력증강 - 연속1회 - 사냥용",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 5,
+                    "type": "logic",
+                    "display_text": "공력증강 - 연속1회 - 사냥용",
+                    "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
+                    "logic_name": "공력증강 - 연속1회 - 사냥용",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 6,
+                    "type": "logic",
+                    "display_text": "공력증강 - 연속1회 - 사냥용",
+                    "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
+                    "logic_name": "공력증강 - 연속1회 - 사냥용",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 7,
+                    "type": "logic",
+                    "display_text": "공력증강 - 연속1회 - 사냥용",
+                    "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
+                    "logic_name": "공력증강 - 연속1회 - 사냥용",
+                    "repeat_count": 1
                 }
             ]
         }
