--- a/BE/settings/setting files/settings.json
+++ b/BE/settings/setting files/settings.json
@@ -10,10 +10,10 @@
         }
     },
     "key_delays": {
-        "press": 0.0205,
-        "release": 0.0005,
-        "mouse_input": 0.0205,
-        "default": 0.0205
+        "press": 0.021,
+        "release": 0.0,
+        "mouse_input": 0.02,
+        "default": 0.02
     },
     "gauge_monitor": {
         "hp_gauge": {
@@ -61,7 +61,7 @@
             "order": 1,
             "name": "체력 회복 - 9회",
             "created_at": "2024-11-26T06:51:44.957381",
-            "updated_at": "2024-12-12T14:50:08.476152",
+            "updated_at": "2024-12-12T16:14:27.330921",
             "trigger_key": {
                 "key_code": "숫자패드 7",
                 "modifiers": 0,
@@ -92,7 +92,13 @@
                     "modifiers": 0
                 },
                 {
-                    "order": 3,
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.0150초",
+                    "duration": 0.015,
+                    "order": 3
+                },
+                {
+                    "order": 4,
                     "display_text": "키 입력: Home --- 누르기",
                     "action": "누르기",
                     "type": "key_input",
@@ -102,7 +108,7 @@
                     "modifiers": 0
                 },
                 {
-                    "order": 4,
+                    "order": 5,
                     "display_text": "키 입력: Home --- 떼기",
                     "action": "떼기",
                     "type": "key_input",
@@ -112,7 +118,13 @@
                     "modifiers": 0
                 },
                 {
-                    "order": 5,
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.0150초",
+                    "duration": 0.015,
+                    "order": 6
+                },
+                {
+                    "order": 7,
                     "display_text": "키 입력: 엔터 --- 누르기",
                     "action": "누르기",
                     "type": "key_input",
@@ -122,7 +134,7 @@
                     "modifiers": 0
                 },
                 {
-                    "order": 6,
+                    "order": 8,
                     "display_text": "키 입력: 엔터 --- 떼기",
                     "action": "떼기",
                     "type": "key_input",
@@ -130,9 +142,82 @@
                     "scan_code": 28,
                     "virtual_key": 13,
                     "modifiers": 0
+                }
+            ]
+        },
+        "28cfef76-fb38-426a-a935-b288fd32d6ed": {
+            "order": 2,
+            "name": "체력 회복 - 5회",
+            "created_at": "2024-12-08T13:40:39.094231",
+            "updated_at": "2024-12-12T14:32:36.241704",
+            "trigger_key": null,
+            "repeat_count": 5,
+            "is_nested": true,
+            "items": [
+                {
+                    "order": 1,
+                    "display_text": "키 입력: 숫자패드 7 --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 7",
+                    "scan_code": 71,
+                    "virtual_key": 103,
+                    "modifiers": 0
+                },
+                {
+                    "order": 2,
+                    "display_text": "키 입력: 숫자패드 7 --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 7",
+                    "scan_code": 71,
+                    "virtual_key": 103,
+                    "modifiers": 0
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.0041초",
+                    "duration": 0.0041,
+                    "order": 3
+                },
+                {
+                    "order": 4,
+                    "display_text": "키 입력: Home --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "Home",
+                    "scan_code": 71,
+                    "virtual_key": 36,
+                    "modifiers": 0
+                },
+                {
+                    "order": 5,
+                    "display_text": "키 입력: Home --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "Home",
+                    "scan_code": 71,
+                    "virtual_key": 36,
+                    "modifiers": 0
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.0041초",
+                    "duration": 0.0041,
+                    "order": 6
                 },
                 {
                     "order": 7,
+                    "display_text": "키 입력: 엔터 --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "엔터",
+                    "scan_code": 28,
+                    "virtual_key": 13,
+                    "modifiers": 0
+                },
+                {
+                    "order": 8,
                     "display_text": "키 입력: 엔터 --- 떼기",
                     "action": "떼기",
                     "type": "key_input",
@@ -697,6 +782,65 @@
                 }
             ]
         },
+        "ba00b4b7-4268-4138-a424-d1e9353d7743": {
+            "order": 8,
+            "name": "공력증강 - 5회",
+            "created_at": "2024-11-30T16:57:51.034740",
+            "updated_at": "2024-12-11T20:22:45.622335",
+            "trigger_key": {
+                "display_text": "",
+                "key_code": "",
+                "modifiers": 0,
+                "scan_code": 0,
+                "virtual_key": 0
+            },
+            "repeat_count": 5,
+            "is_nested": true,
+            "items": [
+                {
+                    "order": 1,
+                    "display_text": "키 입력: 숫자패드 6 --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 6",
+                    "scan_code": 77,
+                    "virtual_key": 102,
+                    "modifiers": 0
+                },
+                {
+                    "order": 2,
+                    "display_text": "키 입력: 숫자패드 6 --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 6",
+                    "scan_code": 77,
+                    "virtual_key": 102,
+                    "modifiers": 0
+                },
+                {
+                    "order": 3,
+                    "type": "logic",
+                    "display_text": "체력 회복 - 9회",
+                    "logic_id": "0dfa1418-cab1-4439-ae8a-b0c971471c99",
+                    "logic_name": "체력 회복 - 9회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 4,
+                    "type": "logic",
+                    "display_text": "동동주 마시기 - 1회",
+                    "logic_id": "9614e85c-3ceb-423b-97ea-e17bfc0101fc",
+                    "logic_name": "동동주 마시기 - 1회",
+                    "repeat_count": 1
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.005초",
+                    "duration": 0.005,
+                    "order": 5
+                }
+            ]
+        },
         "9614e85c-3ceb-423b-97ea-e17bfc0101fc": {
             "order": 9,
             "name": "동동주 마시기 - 1회",
@@ -764,7 +908,7 @@
             "order": 10,
             "name": "첨 중독, 저주, 마비 - 1회",
             "created_at": "2024-11-30T10:25:06.438732",
-            "updated_at": "2024-12-11T23:06:19.092408",
+            "updated_at": "2024-12-12T16:02:07.880439",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -1067,6 +1211,16 @@
                 },
                 {
                     "order": 35,
+                    "display_text": "키 입력: 숫자패드 9 --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 9",
+                    "scan_code": 73,
+                    "virtual_key": 105,
+                    "modifiers": 0
+                },
+                {
+                    "order": 36,
                     "display_text": "키 입력: 숫자패드 9 --- 떼기",
                     "action": "떼기",
                     "type": "key_input",
@@ -1076,9 +1230,55 @@
                     "modifiers": 0
                 },
                 {
-                    "order": 36,
+                    "order": 37,
+                    "type": "logic",
+                    "display_text": "중독만 - 5회 (첨이랑 딱 맞음)",
+                    "logic_id": "1f3d9c9f-5f36-40e1-8062-4aa10c6b5cdf",
+                    "logic_name": "중독만 - 5회 (첨이랑 딱 맞음)",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 38,
                     "display_text": "키 입력: 숫자패드 9 --- 누르기",
                     "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 9",
+                    "scan_code": 73,
+                    "virtual_key": 105,
+                    "modifiers": 0
+                },
+                {
+                    "order": 39,
+                    "display_text": "키 입력: 숫자패드 9 --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 9",
+                    "scan_code": 73,
+                    "virtual_key": 105,
+                    "modifiers": 0
+                },
+                {
+                    "order": 40,
+                    "type": "logic",
+                    "display_text": "중독만 - 5회 (첨이랑 딱 맞음)",
+                    "logic_id": "1f3d9c9f-5f36-40e1-8062-4aa10c6b5cdf",
+                    "logic_name": "중독만 - 5회 (첨이랑 딱 맞음)",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 41,
+                    "display_text": "키 입력: 숫자패드 9 --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 9",
+                    "scan_code": 73,
+                    "virtual_key": 105,
+                    "modifiers": 0
+                },
+                {
+                    "order": 42,
+                    "display_text": "키 입력: 숫자패드 9 --- 떼기",
+                    "action": "떼기",
                     "type": "key_input",
                     "key_code": "숫자패드 9",
                     "scan_code": 73,
@@ -1091,14 +1291,14 @@
             "order": 11,
             "name": "중독, 마비 첨 사냥 - 무한반복",
             "created_at": "2024-12-08T21:25:24.196785",
-            "updated_at": "2024-12-12T14:37:00.626023",
+            "updated_at": "2024-12-12T16:11:47.056103",
             "trigger_key": {
                 "key_code": "숫자패드 *",
                 "modifiers": 0,
                 "scan_code": 55,
                 "virtual_key": 106
             },
-            "repeat_count": 9991,
+            "repeat_count": 9999,
             "is_nested": false,
             "items": [
                 {
@@ -1156,6 +1356,14 @@
                     "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
                     "logic_name": "공력증강 - 연속1회 - 사냥용",
                     "repeat_count": 1
+                },
+                {
+                    "order": 8,
+                    "type": "logic",
+                    "display_text": "공력증강 - 연속1회 - 사냥용",
+                    "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
+                    "logic_name": "공력증강 - 연속1회 - 사냥용",
+                    "repeat_count": 1
                 }
             ]
         },
@@ -1163,7 +1371,7 @@
             "order": 12,
             "name": "중독, 마비 첨 사냥 - 무한반복 - 복제",
             "created_at": "2024-12-12T08:34:33.775036",
-            "updated_at": "2024-12-12T14:36:58.380993",
+            "updated_at": "2024-12-12T16:11:49.092552",
             "trigger_key": {
                 "key_code": "키 코드 192",
                 "modifiers": 0,
@@ -1223,6 +1431,14 @@
                 },
                 {
                     "order": 7,
+                    "type": "logic",
+                    "display_text": "공력증강 - 연속1회 - 사냥용",
+                    "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
+                    "logic_name": "공력증강 - 연속1회 - 사냥용",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 8,
                     "type": "logic",
                     "display_text": "공력증강 - 연속1회 - 사냥용",
                     "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
@@ -4150,7 +4366,7 @@
             "order": 37,
             "name": "월드 재입장",
             "created_at": "2024-12-11T21:30:39.063045",
-            "updated_at": "2024-12-12T14:54:18.359697",
+            "updated_at": "2024-12-12T17:48:28.205652",
             "trigger_key": {
                 "key_code": "F2",
                 "modifiers": 0,
@@ -4214,7 +4430,7 @@
             "order": 39,
             "name": "캐릭터 선택",
             "created_at": "2024-12-12T08:29:17.016286",
-            "updated_at": "2024-12-12T14:54:11.517472",
+            "updated_at": "2024-12-12T17:48:35.864504",
             "trigger_key": {
                 "key_code": "F3",
                 "modifiers": 0,
@@ -4246,8 +4462,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.1000초",
-                    "duration": 0.1,
+                    "display_text": "지연시간 : 0.1500초",
+                    "duration": 0.15,
                     "order": 3
                 },
                 {
@@ -4272,8 +4488,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.1000초",
-                    "duration": 0.1,
+                    "display_text": "지연시간 : 0.1500초",
+                    "duration": 0.15,
                     "order": 6
                 },
                 {
@@ -4298,8 +4514,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.1000초",
-                    "duration": 0.1,
+                    "display_text": "지연시간 : 0.1500초",
+                    "duration": 0.15,
                     "order": 9
                 },
                 {
@@ -4324,8 +4540,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.1000초",
-                    "duration": 0.1,
+                    "display_text": "지연시간 : 0.1500초",
+                    "duration": 0.15,
                     "order": 12
                 }
             ]
